support for 'aci' as neutron-api-plugin

--- a/templates/icehouse/dhcp_agent.ini
+++ b/templates/icehouse/dhcp_agent.ini
@@ -16,7 +16,7 @@ enable_metadata_network = True
 enable_isolated_metadata = True
 {% endif -%}
 
-{% if plugin == 'n1kv' %}
+{% if plugin == 'n1kv' or plugin == 'aci' %}
 enable_metadata_network = True
 enable_isolated_metadata = True
 resync_interval = 30
