--- a/templates/icehouse/dhcp_agent.ini
+++ b/templates/icehouse/dhcp_agent.ini
@@ -16,12 +16,14 @@ enable_metadata_network = True
 enable_isolated_metadata = True
 {% endif -%}
 
-{% if plugin == 'n1kv' or plugin == 'aci' %}
+{% if plugin == 'n1kv' %}
 enable_metadata_network = True
 enable_isolated_metadata = True
 resync_interval = 30
 use_namespaces = True
 dhcp_lease_time=3600
+{% elif plugin == 'aci' %}
+enable_isolated_metadata = True
 {% else %}
 ovs_use_veth = True
 {% endif %}
