--- a/templates/mitaka/dhcp_agent.ini
+++ b/templates/mitaka/dhcp_agent.ini
@@ -14,6 +14,7 @@ dnsmasq_config_file = /etc/neutron/dnsmasq.conf
 
 enable_metadata_network = {{ enable_metadata_network }}
 enable_isolated_metadata = {{ enable_isolated_metadata }}
+force_metadata=True
 
 {% if plugin == 'n1kv' %}
 resync_interval = 30
