--- a/templates/icehouse/dhcp_agent.ini
+++ b/templates/icehouse/dhcp_agent.ini
@@ -24,6 +24,7 @@ use_namespaces = True
 dhcp_lease_time=3600
 {% elif plugin == 'aci' %}
 enable_isolated_metadata = True
+force_metadata = True
 {% else %}
 ovs_use_veth = True
 {% endif %}
