Remove nova metadata service
The change turns off the local nova metadata service and uses
endpoint data recieved from the quantum-network-service relation
to point the neutron metadata service at the nova metadata service
on the nova cloud controller for Queens+.

Depends-On: I5ad15ba782cb87b6fdb3c0941a6482d201670bff
Change-Id: I7037a20feac73f3a3f1ed1b8b1b70d0fa534bc46

--- a/config.yaml
+++ b/config.yaml
@@ -257,7 +257,9 @@ options:
     description: |
       A JSON-formatted string that will serve as vendor metadata
       (via "StaticJSON" provider) to all VM's within an OpenStack deployment,
-      regardless of project or domain.
+      regardless of project or domain. For deployments of Queens or later
+      this value is ignored. Please set the corresponding value in the
+      nova-cloud-controller charm.
   vendor-data-url:
     type: string
     default:
@@ -266,4 +268,6 @@ options:
       (via "DynamicJSON" provider) to all VM's within an OpenStack deployment,
       regardless of project or domain.
       .
-      Only supported in OpenStack Newton and higher.
+      Only supported in OpenStack Newton and higher. For deployments of Queens or
+      later this value is ignored. Please set the corresponding value in the
+      nova-cloud-controller charm.
