--- a/templates/queens/metadata_agent.ini
+++ b/templates/queens/metadata_agent.ini
@@ -8,8 +8,9 @@
 root_helper = sudo neutron-rootwrap /etc/neutron/rootwrap.conf
 state_path = /var/lib/neutron
 # Gateway runs a metadata API server locally
-nova_metadata_ip = {{ local_ip }}
-nova_metadata_port = 8775
+nova_metadata_host = {{ nova_metadata_host }}
+nova_metadata_port = {{ nova_metadata_port }}
+nova_metadata_protocol = {{ nova_metadata_protocol }}
 metadata_proxy_shared_secret = {{ shared_secret }}
 cache_url = memory://?default_ttl=5
 metadata_workers = {{ workers }}
