--- a/templates/mitaka/neutron.conf
+++ b/templates/mitaka/neutron.conf
@@ -16,6 +16,7 @@ rpc_response_timeout = {{ rpc_response_timeout }}
 [agent]
 root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 report_interval = {{ report_interval }}
+{% include "parts/agent" %}
 
 {% include "section-rabbitmq-oslo" %}
 
