Set dhcp_domain for nova-metadata-api
For guest operating systems that rely on nova metadata rather than dhcp
offers for host dns domain settings it is necessary to set dhcp_domain
in the nova.conf.

Change-Id: If7de988ddcd8817d02b261bea601d6922275890c
Partial-Bug: #1805645

--- a/templates/newton/nova.conf
+++ b/templates/newton/nova.conf
@@ -29,6 +29,12 @@ vendordata_dynamic_targets = {{ vendor_data_url }}
 {% endif -%}
 {% endif -%}
 
+{% if dns_domain -%}
+# Per LP#1805645, dhcp_domain needs to be configured for nova-metadata-api
+# It gets this information from neutron.
+dhcp_domain = {{ dns_domain }}
+{% endif -%}
+
 [neutron]
 url={{ quantum_url }}
 auth_url={{ auth_protocol }}://{{ keystone_host }}:{{ auth_port }}
