--- a/templates/mitaka/nova.conf
+++ b/templates/mitaka/nova.conf
@@ -23,6 +23,12 @@ vendordata_driver = nova.api.metadata.vendordata_json.JsonFileVendorData
 vendordata_jsonfile_path = /etc/nova/vendor_data.json
 {% endif -%}
 
+{% if dns_domain -%}
+# Per LP#1805645, dhcp_domain needs to be configured for nova-metadata-api
+# It gets this information from neutron.
+dhcp_domain = {{ dns_domain }}
+{% endif -%}
+
 [neutron]
 url={{ quantum_url }}
 auth_url={{ auth_protocol }}://{{ keystone_host }}:{{ auth_port }}
