Update charm-helpers-hooks.yaml and sync ch
Using the new version of the sync tool which removes the charmhelpers
directory before syncing, run charm helpers sync to find any unexpected
missing dependencies.

Change-Id: I8a01637e77fa4e76ba5144e1c28a3fb98d339084

--- a/charm-helpers-hooks.yaml
+++ b/charm-helpers-hooks.yaml
@@ -8,7 +8,7 @@ include:
     - contrib.openstack|inc=*
     - contrib.hahelpers
     - contrib.network
-    - contrib.python.packages
+    - contrib.python
     - contrib.storage.linux
     - contrib.python
     - payload
