Add security-checklist action
Change-Id: I39b53cb049b84a9ccde91adebd5aec6ea7a8168f

--- a/actions.yaml
+++ b/actions.yaml
@@ -4,3 +4,5 @@ pause:
     description: Pause the neutron-gateway unit.
 resume:
     descrpition: Resume the neutron-gateway unit.
+security-checklist:
+  description: Validate the running configuration against the OpenStack security guides checklist
