Revert "Stop using veth pairs to connect qdhcp ns"
Reverting as this change causes existing qdhcp namespaces to become
inaccessible.

This reverts commit bbc20dbe49e13fc2166cfae3a10eff57cad56553.

Change-Id: I91ec8b34bd531e48d00c48512a43921f97b6d9a2

--- a/templates/icehouse/dhcp_agent.ini
+++ b/templates/icehouse/dhcp_agent.ini
@@ -17,11 +17,12 @@ enable_metadata_network = True
 enable_isolated_metadata = True
 {% endif -%}
 
-ovs_use_veth = False
 {% if plugin == 'n1kv' %}
 enable_metadata_network = True
 enable_isolated_metadata = True
 resync_interval = 30
 use_namespaces = True
 dhcp_lease_time=3600
+{% else %}
+ovs_use_veth = True
 {% endif %}
