--- a/templates/juno/l3_agent.ini
+++ b/templates/juno/l3_agent.ini
@@ -11,11 +11,13 @@ admin_user = {{ service_username }}
 admin_password = {{ service_password }}
 root_helper = sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf
 handle_internal_only_routers = {{ handle_internal_only_router }}
-ovs_use_veth = False
 {% if plugin == 'n1kv' %}
 l3_agent_manager = neutron.agent.l3_agent.L3NATAgentWithStateReport
 external_network_bridge = br-int
+ovs_use_veth = False
 use_namespaces = True
+{% else %}
+ovs_use_veth = True
 {% endif %}
 {% if external_configuration_new -%}
 gateway_external_network_id =
