--- a/templates/mitaka/dhcp_agent.ini
+++ b/templates/mitaka/dhcp_agent.ini
@@ -28,9 +28,10 @@ dhcp_domain = {{ dns_domain }}
 enable_metadata_network = {{ enable_metadata_network }}
 enable_isolated_metadata = {{ enable_isolated_metadata }}
 
-ovs_use_veth = False
 {% if plugin == 'n1kv' %}
 resync_interval = 30
 use_namespaces = True
 dhcp_lease_time=3600
+{% else %}
+ovs_use_veth = True
 {% endif %}
