Adds l3_extension_plugins to L3AgentContext ctx
* get a list of l3 plugins to enable based on relation data coming from
  neutron-api;
* refactor adding fwaasv2 service plugins to the l3 agent to accommodate
  the l3_extension_plugins change.

See https://github.com/juju/charm-helpers/pull/370
See LP: #1842353

Change-Id: Ic3a8e302942ed331bc3d80223e123c13d61db3b2
Closes-Bug: #1842353

--- a/templates/rocky/l3_agent.ini
+++ b/templates/rocky/l3_agent.ini
@@ -1,4 +1,4 @@
-# stein
+# newton
 ###############################################################################
 # [ WARNING ]
 # Configuration file maintained by Juju. Local changes may be overwritten.
@@ -31,13 +31,3 @@ ha_vrrp_health_check_interval = 30
 
 [AGENT]
 extensions = {{ l3_extension_plugins }}
-{% if enable_nfg_logging -%}
-[network_log]
-{% if nfg_log_rate_limit -%}
-rate_limit = {{ nfg_log_rate_limit }}
-{% endif -%}
-burst_limit = {{ nfg_log_burst_limit }}
-{% if nfg_log_output_base -%}
-local_output_log_base = {{ nfg_log_output_base }}
-{% endif -%}
-{% endif -%}
