--- a/templates/mitaka/dhcp_agent.ini
+++ b/templates/mitaka/dhcp_agent.ini
@@ -28,6 +28,10 @@ dhcp_domain = {{ dns_domain }}
 enable_metadata_network = {{ enable_metadata_network }}
 enable_isolated_metadata = {{ enable_isolated_metadata }}
 
+{% if plugin == 'aci' %}
+force_metadata=True
+{% endif %}
+
 {% if plugin == 'n1kv' %}
 resync_interval = 30
 use_namespaces = True
