Add ovsdb-timeout configuration option
ovsdb-timeout sets ovsdb_timeout in openvswitch_agent.ini, this option
is used to determine when ovsdb commands should be marked as fail. This
is helpful for large clouds or where the node is under pressure.

Change-Id: I0b0e397691c49d3fcebdd30bbe9b160789acf3c3
Closes-Bug: #1849732

--- a/config.yaml
+++ b/config.yaml
@@ -334,3 +334,9 @@ options:
       Can be used to avoid excessive memory consumption.
       WARNING: Should be NOT LESS than 25.
       (Available from Stein)
+  ovsdb-timeout:
+    type: int
+    default:
+    description: |
+      Timeout in seconds for ovsdb commands.
+      (Available from Queens)
