--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Classic charm (with amulet): ./tox.ini
+# Classic charm: ./tox.ini
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.  See the 'global' dir contents for available
 # choices of tox.ini for OpenStack Charms:
@@ -15,12 +15,11 @@ skip_missing_interpreters = False
 setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
          CHARM_DIR={envdir}
-         AMULET_SETUP_TIMEOUT=5400
 install_command =
   pip install {opts} {packages}
 commands = stestr run --slowest {posargs}
 whitelist_externals = juju
-passenv = HOME TERM AMULET_* CS_* OS_* TEST_*
+passenv = HOME TERM CS_* OS_* TEST_*
 
 [testenv:py3]
 basepython = python3
@@ -81,40 +80,32 @@ omit =
 basepython = python3
 commands = {posargs}
 
-[testenv:func-noop]
-# DRY RUN - For Debug
-basepython = python2.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-commands =
-    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" -n --no-destroy
-
 [testenv:func]
 # Charm Functional Test
-# Run all gate tests which are +x (expected to always pass)
-basepython = python2.7
+# Run all bundles (expected to always pass)
+basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "gate-*" --no-destroy
+    functest-run-suite --keep-model
 
 [testenv:func-smoke]
 # Charm Functional Test
-# Run a specific test as an Amulet smoke test (expected to always pass)
-basepython = python2.7
+# Run a specific bundle as a smoke test (expected to always pass)
+basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-    bundletester -vl DEBUG -r json -o func-results.json gate-basic-bionic-train --no-destroy
+    functest-run-suite --keep-model --smoke
 
 [testenv:func-dev]
 # Charm Functional Test
-# Run all development test targets which are +x (may not always pass!)
-basepython = python2.7
+# Run all development test targets (may not always pass!)
+basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-    bundletester -vl DEBUG -r json -o func-results.json --test-pattern "dev-*" --no-destroy
+    functest-run-suite --keep-model --dev
 
 [flake8]
 ignore = E402,E226
