Make ovs_use_veth a config option
This change uses a common DHCPAgentContext and takes care to check for a
pre-existing setting in the dhcp_agent.ini. Only allowing a config
change if there is no pre-existing setting.

Please review and merge charm-helpers PR:
https://github.com/juju/charm-helpers/pull/422

Partial-Bug: #1831935

func-test-pr: https://github.com/openstack-charmers/zaza-openstack-tests/pull/157
Change-Id: Ia01c637b0837a4e594d16f6565c605460ad3f922

--- a/config.yaml
+++ b/config.yaml
@@ -340,3 +340,12 @@ options:
     description: |
       Timeout in seconds for ovsdb commands.
       (Available from Queens)
+  ovs-use-veth:
+    type: string
+    default:
+    description: |
+      "True" or "False" string value. It is safe to leave this option unset.
+      This option allows the DHCP agent to use a veth interface for OVS in
+      order to support kernels with limited namespace support. i.e. Trusty.
+      Changing the value after neutron DHCP agents are created will break
+      access. The charm will go into a blocked state if this is attempted.
