--- a/templates/mitaka/dhcp_agent.ini
+++ b/templates/mitaka/dhcp_agent.ini
@@ -33,5 +33,5 @@ resync_interval = 30
 use_namespaces = True
 dhcp_lease_time=3600
 {% else %}
-ovs_use_veth = True
+ovs_use_veth = {{ ovs_use_veth }}
 {% endif %}
