--- a/tests/bundles/trusty-mitaka.yaml
+++ b/tests/bundles/trusty-mitaka.yaml
@@ -28,14 +28,14 @@ applications:
     to:
       - '0'
   rabbitmq-server:
-    charm: cs:~openstack-charmers-next/rabbitmq-server
+    charm: cs:rabbitmq-server
     num_units: 1
     options:
       source: *openstack-origin
     to:
       - '1'
   neutron-api:
-    charm: cs:~openstack-charmers-next/neutron-api
+    charm: cs:neutron-api
     series: *series
     num_units: 1
     options:
@@ -45,21 +45,21 @@ applications:
     to:
       - '2'
   keystone:
-    charm: cs:~openstack-charmers-next/keystone
+    charm: cs:keystone
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '3'
   glance:
-    charm: cs:~openstack-charmers-next/glance
+    charm: cs:glance
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '4'
   neutron-openvswitch:
-    charm: cs:~openstack-charmers-next/neutron-openvswitch
+    charm: cs:neutron-openvswitch
   neutron-gateway:
     charm: "../../../neutron-gateway"
     num_units: 1
@@ -69,7 +69,7 @@ applications:
     to:
       - '5'
   nova-cloud-controller:
-    charm: cs:~openstack-charmers-next/nova-cloud-controller
+    charm: cs:nova-cloud-controller
     num_units: 1
     options:
       network-manager: Neutron
@@ -77,7 +77,7 @@ applications:
     to:
       - '6'
   nova-compute:
-    charm: cs:~openstack-charmers-next/nova-compute
+    charm: cs:nova-compute
     num_units: 2
     options:
       openstack-origin: *openstack-origin
