--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -1,5 +1,7 @@
 charm_name: neutron-gateway
 gate_bundles:
+  - focal-ussuri
+  - bionic-ussuri
   - bionic-train
   - bionic-stein
   - bionic-rocky
@@ -23,3 +25,6 @@ configure:
   - zaza.openstack.charm_tests.nova.setup.create_flavors
   - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
   - zaza.openstack.charm_tests.keystone.setup.add_demo_user
+tests_options:
+  force_deploy:
+    - focal-ussuri
