--- a/config.yaml
+++ b/config.yaml
@@ -86,6 +86,10 @@ options:
       traffic to the external public network. Valid values are either MAC
       addresses (in which case only MAC addresses for interfaces without an IP
       address already assigned will be used), or interfaces (eth0)
+      .
+      Note that if data-port is used then this config item is ignored, a
+      warning is logged, and the unit is marked as blocked in order to indicate
+      that the charm is misconfigured.
   data-port:
     type: string
     default:
