--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,12 @@
-# Classic charm: ./tox.ini
+# Classic charm (with zaza): ./tox.ini
 # This file is managed centrally by release-tools and should not be modified
 # within individual charm repos.  See the 'global' dir contents for available
 # choices of tox.ini for OpenStack Charms:
 #     https://github.com/openstack-charmers/release-tools
+#
+# TODO: Distill the func test requirements from the lint/unit test
+#       requirements.  They are intertwined.  Also, Zaza itself should specify
+#       all of its own requirements and if it doesn't, fix it there.
 [tox]
 envlist = pep8,py3
 skipsdist = True
@@ -20,11 +24,7 @@ install_command =
 commands = stestr run --slowest {posargs}
 whitelist_externals = juju
 passenv = HOME TERM CS_* OS_* TEST_*
-
-[testenv:py3]
-basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+deps = -r{toxinidir}/test-requirements.txt
 
 [testenv:py35]
 basepython = python3.5
@@ -38,6 +38,16 @@ deps = -r{toxinidir}/requirements.txt
 
 [testenv:py37]
 basepython = python3.7
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+
+[testenv:py38]
+basepython = python3.8
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+
+[testenv:py3]
+basepython = python3
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 
@@ -80,32 +90,30 @@ omit =
 basepython = python3
 commands = {posargs}
 
-[testenv:func]
-# Charm Functional Test
-# Run all bundles (expected to always pass)
+[testenv:func-noop]
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+commands =
+    functest-run-suite --help
+
+[testenv:func]
+basepython = python3
 commands =
     functest-run-suite --keep-model
 
 [testenv:func-smoke]
-# Charm Functional Test
-# Run a specific bundle as a smoke test (expected to always pass)
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
 commands =
     functest-run-suite --keep-model --smoke
 
 [testenv:func-dev]
-# Charm Functional Test
-# Run all development test targets (may not always pass!)
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
 commands =
     functest-run-suite --keep-model --dev
+
+[testenv:func-target]
+basepython = python3
+commands =
+    functest-run-suite --keep-model --bundle {posargs}
 
 [flake8]
 ignore = E402,E226
