--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -14,7 +14,8 @@ gate_bundles:
 smoke_bundles:
   - bionic-train
 dev_bundles:
-  - eoan-train
+  - groovy-victoria
+  - focal-victoria
 tests:
   - zaza.openstack.charm_tests.neutron.tests.NeutronGatewayTest
   - zaza.openstack.charm_tests.neutron.tests.SecurityTest
@@ -27,4 +28,4 @@ configure:
   - zaza.openstack.charm_tests.keystone.setup.add_demo_user
 tests_options:
   force_deploy:
-    - focal-ussuri
+    - groovy-victoria
