--- a/templates/newton/l3_agent.ini
+++ b/templates/newton/l3_agent.ini
@@ -30,8 +30,8 @@ gateway_external_network_id = {{ ext_net_id }}
 external_network_bridge = br-ex
 {% endif -%}
 agent_mode = {{ agent_mode }}
-{% if use_l3ha -%}
-ha_vrrp_health_check_interval = 30
+{% if use_l3ha and keepalived_healthcheck_interval -%}
+ha_vrrp_health_check_interval = {{ keepalived_healthcheck_interval }}
 {% endif -%}
 
 [AGENT]
