--- a/tests/bundles/groovy-victoria.yaml
+++ b/tests/bundles/groovy-victoria.yaml
@@ -21,6 +21,8 @@ machines:
   10:
     constraints: "root-disk=20G mem=4G"
   11: {}
+  12: {}
+  13: {}
 
 # We specify machine placements for these to improve iteration
 # time, given that machine "0" comes up way before machine "7"
@@ -95,6 +97,17 @@ applications:
     to:
       - '7'
 
+  ovn-dedicated-chassis:
+    charm: cs:~openstack-charmers-next/ovn-dedicated-chassis
+    num_units: 1
+    options:
+      # start new units paused to allow unit by unit OVS to OVN migration
+      new-units-paused: true
+    to:
+      # NOTE: We deliberately colocate the ovn-dedicated-chassis with the
+      # neutron-gateway for migration test purposes.
+      - '7'
+
   nova-cloud-controller:
     charm: cs:~openstack-charmers-next/nova-cloud-controller
     num_units: 1
@@ -120,6 +133,28 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '11'
+
+  vault-mysql-router:
+    charm: cs:~openstack-charmers-next/mysql-router
+  vault:
+    charm: cs:~openstack-charmers-next/vault
+    num_units: 1
+    to:
+      - '12'
+  ovn-central:
+    charm: cs:~openstack-charmers-next/ovn-central
+    num_units: 3
+    options:
+      source: *openstack-origin
+    to:
+      - '13'
+  neutron-api-plugin-ovn:
+    charm: cs:~openstack-charmers-next/neutron-api-plugin-ovn
+  ovn-chassis:
+    charm: cs:~openstack-charmers-next/ovn-chassis
+    options:
+      # start new units paused to allow unit by unit OVS to OVN migration
+      new-units-paused: true
 
 relations:
 
@@ -204,3 +239,31 @@ relations:
 
   - - 'placement:placement'
     - 'nova-cloud-controller:placement'
+
+    # We need to defer the addition of the neutron-api-plugin-ovn subordinate
+  # relation to the functional test as the test will first validate the legacy
+  # Neutron ML2+OVS topology, migrate it to OVN and then confirm connectivity
+  # post migration.
+  #
+  # - - neutron-api-plugin-ovn:neutron-plugin
+  #   - neutron-api:neutron-plugin-api-subordinate
+  - - ovn-central:certificates
+    - vault:certificates
+  - - ovn-central:ovsdb-cms
+    - neutron-api-plugin-ovn:ovsdb-cms
+  - - ovn-chassis:nova-compute
+    - nova-compute:neutron-plugin
+  - - ovn-chassis:certificates
+    - vault:certificates
+  - - ovn-chassis:ovsdb
+    - ovn-central:ovsdb
+  - - ovn-dedicated-chassis:certificates
+    - vault:certificates
+  - - ovn-dedicated-chassis:ovsdb
+    - ovn-central:ovsdb
+  - - vault:certificates
+    - neutron-api-plugin-ovn:certificates
+  - - vault:shared-db
+    - vault-mysql-router:shared-db
+  - - vault-mysql-router:db-router
+    - mysql-innodb-cluster:db-router
