Added suppoer for fqdn hostname for dhcp agent

--- a/templates/ocata/dhcp_agent.ini
+++ b/templates/ocata/dhcp_agent.ini
@@ -17,6 +17,10 @@ dnsmasq_config_file = /etc/neutron/dnsmasq.conf
 dnsmasq_dns_servers = {{ dns_servers }}
 {% endif -%}
 
+{% if host_fqdn -%}
+host = {{ host_fqdn }}
+{% endif -%}
+
 {% if dns_domain -%}
 dns_domain = {{ dns_domain }}
 # Per LP#1583769, dhcp_domain needs to be configured as well. Additional
