Prune gate tests
Prune gate tests and move tests to dev_bundles.

Change-Id: I5f36d39a80598f8cbef1c5f621d838f27227a10a

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -15,13 +15,15 @@ gate_bundles:
   - bionic-ussuri
   - bionic-train
   - bionic-stein
-  - bionic-rocky
   - bionic-queens
-  - xenial-queens
-  - xenial-pike
-  - xenial-ocata
   - xenial-mitaka
+
+dev_bundles:
   - trusty-mitaka
+  - xenial-ocata
+  - xenial-pike
+  - xenial-queens
+  - bionic-rocky
 
 target_deploy_status:
   neutron-api-plugin-ovn:
