Remove -proposed from the focal-ussuri bundle
The -proposed bucket contains a buggy pip version at
the moment which leads to `pip freeze` failures in
placement's install hook. A similar change has
already been made in another bundle:
https://review.opendev.org/c/openstack/charm-neutron-openvswitch/+/775801

Change-Id: I4561d693034d6e0181def787a53e95232d05fca7

--- a/tests/bundles/focal-ussuri.yaml
+++ b/tests/bundles/focal-ussuri.yaml
@@ -1,5 +1,5 @@
 variables:
-  openstack-origin: &openstack-origin distro-proposed
+  openstack-origin: &openstack-origin distro
 
 series: &series focal
 
