Test bundles for focal-wallaby and hirsute-wallaby
These are the test bundles (and any associated changes) for
focal-wallaby and hirsute-wallaby support.

Libraries sync.

hisute-wallaby test is disabled (moved to dev) due to [1] as bundle may
reference a reactive charm.

[1] https://github.com/juju-solutions/layer-basic/issues/194

Change-Id: I26d558bc7f1847459a1d510c887a3128637a10ce

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -10,6 +10,7 @@ smoke_bundles:
 
 gate_bundles:
   - migrate-ovn: groovy-victoria
+  - migrate-ovn: focal-wallaby
   - migrate-ovn: focal-victoria
   - migrate-ovn: focal-ussuri
   - bionic-ussuri
@@ -24,6 +25,7 @@ dev_bundles:
   - xenial-pike
   - xenial-queens
   - bionic-rocky
+  - migrate-ovn: hirsute-wallaby
 
 target_deploy_status:
   neutron-api-plugin-ovn:
@@ -82,4 +84,4 @@ tests_options:
   # allows verifying instances survive a SDN migration.
   zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest.test_instances_have_networking.run_resource_cleanup: false
   force_deploy:
-    - groovy-victoria
+    - hirsute-wallaby
