Actions that expose various neutron resources
New actions:
  * show-routers
  * show-dhcp-networks
  * show-loadbalancers

Partial-Bug: #1916231
Closes-Bug: #1917401
Closes-Bug: #1917403
Closes-Bug: #1917405

Change-Id: Ie59c2a7d5c1ee9c51a0f7db4e8f38229812ac84a
func-test-pr: https://github.com/openstack-charmers/zaza-openstack-tests/pull/611

--- a/actions.yaml
+++ b/actions.yaml
@@ -49,5 +49,11 @@ run-deferred-hooks:
     .
     NOTE: Service will be restarted as needed irrespective of enable-auto-restarts
 show-deferred-events:
-    descrpition: |
+    description: |
         Show the outstanding restarts
+show-routers:
+  description: Shows a list of routers hosted on the neutron-gateway unit.
+show-dhcp-networks:
+  description: Shows a list of DHCP networks hosted on the neutron-gateway unit.
+show-loadbalancers:
+  description: Shows a list of LBaasV2 load-balancers hosted on the neutron-gateway unit.
