--- a/config.yaml
+++ b/config.yaml
@@ -162,9 +162,9 @@ options:
     description: |
       The CPU core multiplier to use when configuring worker processes for
       this service. By default, the number of workers for each daemon is
-      set to twice the number of CPU cores a service unit has. When deployed
-      in a LXD container, this default value will be capped to 4 workers
-      unless this configuration option is set.
+      set to twice the number of CPU cores a service unit has. This default
+      value will be capped to 4 workers unless this configuration option
+      is set.
   bridge-mappings:
     type: string
     default: 'physnet1:br-data'
