--- a/config.yaml
+++ b/config.yaml
@@ -382,3 +382,9 @@ options:
       by sending a ping and if that fails they trigger a vrrp transition. This
       option defines how frequently this check is performed. Setting this value
       to 0 will disable the healthchecks.
+  enable-auto-restarts:
+    type: boolean
+    default: True
+    description: |
+      Allow the charm and packages to restart services automatically when
+      required.
