Add xena bundles
- add non-voting focal-xena bundle
- add non-voting impish-xena bundle
- charm-helpers sync for new charm-helpers changes
- update tox/pip.sh to ensure setuptools<50.0.0
- disabled hirsute-wallaby due to
  https://bugs.launchpad.net/charm-neutron-gateway/+bug/1945746

Change-Id: I09f111993addbdaa87a1cd695dfebe78844ccd17
Co-authored-by: Aurelien Lourot <aurelien.lourot@canonical.com>

--- a/osci.yaml
+++ b/osci.yaml
@@ -2,3 +2,13 @@
     templates:
       - charm-unit-jobs
       - charm-functional-jobs
+    check:
+      jobs:
+        - focal-xena:
+            voting: false
+        - impish-xena:
+            voting: false
+        # disabled as test flaps:
+        # Bug: https://bugs.launchpad.net/charm-neutron-gateway/+bug/1945746
+        - hirsute-wallaby:
+            voting: false
