--- a/osci.yaml
+++ b/osci.yaml
@@ -1,14 +1,16 @@
 - project:
     templates:
-      - charm-unit-jobs
-      - charm-functional-jobs
+      - charm-yoga-unit-jobs
+      - charm-yoga-functional-jobs
+      - charm-xena-functional-jobs
+      - charm-wallaby-functional-jobs
+      - charm-victoria-functional-jobs
+      - charm-ussuri-functional-jobs
+      - charm-stein-functional-jobs
+      - charm-queens-functional-jobs
     check:
       jobs:
-        - focal-xena:
-            voting: false
-        - impish-xena:
-            voting: false
-        # disabled as test flaps:
-        # Bug: https://bugs.launchpad.net/charm-neutron-gateway/+bug/1945746
-        - hirsute-wallaby:
+        # Non-voting due to:
+        # https://bugs.launchpad.net/charm-neutron-gateway/+bug/1951650
+        - bionic-ussuri:
             voting: false
