--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -9,25 +9,21 @@ smoke_bundles:
   - migrate-ovn: focal-ussuri
 
 gate_bundles:
-  - migrate-ovn: groovy-victoria
-  - migrate-ovn: focal-wallaby
-  - migrate-ovn: focal-victoria
-  - migrate-ovn: focal-ussuri
-  - bionic-ussuri
-  - bionic-train
-  - bionic-stein
   - bionic-queens
-  - xenial-mitaka
-
-dev_bundles:
-  - trusty-mitaka
-  - xenial-ocata
-  - xenial-pike
-  - xenial-queens
-  - bionic-rocky
+  - bionic-stein
+  - bionic-ussuri
+  - migrate-ovn: focal-ussuri
+  - migrate-ovn: focal-victoria
+  - migrate-ovn: focal-wallaby
   - migrate-ovn: focal-xena
   - migrate-ovn: hirsute-wallaby
   - migrate-ovn: impish-xena
+
+dev_bundles:
+  - bionic-rocky
+  - bionic-train
+  - migrate-ovn: focal-yoga
+  - migrate-ovn: jammy-yoga
 
 target_deploy_status:
   neutron-api-plugin-ovn:
@@ -92,5 +88,6 @@ tests_options:
   # allows verifying instances survive a SDN migration.
   zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest.test_instances_have_networking.run_resource_cleanup: false
   force_deploy:
-    - groovy-victoria
+    - hirsute-wallaby
     - impish-xena
+    - jammy-yoga
