--- a/tests/bundles/focal-yoga.yaml
+++ b/tests/bundles/focal-yoga.yaml
@@ -30,18 +30,23 @@ machines:
 applications:
 
   neutron-api-mysql-router:
-    charm: cs:~openstack-charmers-next/mysql-router
+    charm: ch:mysql-router
+    channel: latest/edge
   keystone-mysql-router:
-    charm: cs:~openstack-charmers-next/mysql-router
+    charm: ch:mysql-router
+    channel: latest/edge
   nova-cloud-controller-mysql-router:
-    charm: cs:~openstack-charmers-next/mysql-router
+    charm: ch:mysql-router
+    channel: latest/edge
   glance-mysql-router:
-    charm: cs:~openstack-charmers-next/mysql-router
+    charm: ch:mysql-router
+    channel: latest/edge
   placement-mysql-router:
-    charm: cs:~openstack-charmers-next/mysql-router
+    charm: ch:mysql-router
+    channel: latest/edge
 
   mysql-innodb-cluster:
-    charm: cs:~openstack-charmers-next/mysql-innodb-cluster
+    charm: ch:mysql-innodb-cluster
     num_units: 3
     options:
       source: *openstack-origin
@@ -49,18 +54,20 @@ applications:
       - '0'
       - '1'
       - '2'
+    channel: latest/edge
 
   rabbitmq-server:
-    charm: cs:~openstack-charmers-next/rabbitmq-server
+    charm: ch:rabbitmq-server
     num_units: 1
     options:
     options:
       source: *openstack-origin
     to:
       - '3'
+    channel: latest/edge
 
   neutron-api:
-    charm: cs:~openstack-charmers-next/neutron-api
+    charm: ch:neutron-api
     series: *series
     num_units: 1
     options:
@@ -70,25 +77,29 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '4'
+    channel: latest/edge
 
   keystone:
-    charm: cs:~openstack-charmers-next/keystone
+    charm: ch:keystone
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '5'
+    channel: latest/edge
 
   glance:
-    charm: cs:~openstack-charmers-next/glance
+    charm: ch:glance
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '6'
+    channel: latest/edge
 
   neutron-openvswitch:
-    charm: cs:~openstack-charmers-next/neutron-openvswitch
+    charm: ch:neutron-openvswitch
+    channel: latest/edge
   neutron-gateway:
     charm: "../../../neutron-gateway"
     num_units: 1
@@ -99,7 +110,7 @@ applications:
       - '7'
 
   ovn-dedicated-chassis:
-    charm: cs:~openstack-charmers-next/ovn-dedicated-chassis
+    charm: ch:ovn-dedicated-chassis
     num_units: 1
     options:
       # start new units paused to allow unit by unit OVS to OVN migration
@@ -108,54 +119,63 @@ applications:
       # NOTE: We deliberately colocate the ovn-dedicated-chassis with the
       # neutron-gateway for migration test purposes.
       - '7'
+    channel: latest/edge
 
   nova-cloud-controller:
-    charm: cs:~openstack-charmers-next/nova-cloud-controller
+    charm: ch:nova-cloud-controller
     num_units: 1
     options:
       network-manager: Neutron
       openstack-origin: *openstack-origin
     to:
       - '8'
+    channel: latest/edge
 
   nova-compute:
-    charm: cs:~openstack-charmers-next/nova-compute
+    charm: ch:nova-compute
     num_units: 2
     options:
       openstack-origin: *openstack-origin
     to:
       - '9'
       - '10'
+    channel: latest/edge
 
   placement:
-    charm: cs:~openstack-charmers-next/placement
+    charm: ch:placement
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '11'
+    channel: latest/edge
 
   vault-mysql-router:
-    charm: cs:~openstack-charmers-next/mysql-router
+    charm: ch:mysql-router
+    channel: latest/edge
   vault:
-    charm: cs:~openstack-charmers-next/vault
+    charm: ch:vault
     num_units: 1
     to:
       - '12'
+    channel: latest/edge
   ovn-central:
-    charm: cs:~openstack-charmers-next/ovn-central
+    charm: ch:ovn-central
     num_units: 3
     options:
       source: *openstack-origin
     to:
       - '13'
+    channel: latest/edge
   neutron-api-plugin-ovn:
-    charm: cs:~openstack-charmers-next/neutron-api-plugin-ovn
+    charm: ch:neutron-api-plugin-ovn
+    channel: latest/edge
   ovn-chassis:
-    charm: cs:~openstack-charmers-next/ovn-chassis
+    charm: ch:ovn-chassis
     options:
       # start new units paused to allow unit by unit OVS to OVN migration
       new-units-paused: true
+    channel: latest/edge
 
 relations:
 
