--- a/tests/bundles/focal-xena.yaml
+++ b/tests/bundles/focal-xena.yaml
@@ -1,3 +1,5 @@
+local_overlay_enabled: False
+
 variables:
   openstack-origin: &openstack-origin cloud:focal-xena
 
@@ -30,18 +32,23 @@ machines:
 applications:
 
   neutron-api-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
+    charm: ch:mysql-router
+    channel: 8.0.19/edge
   keystone-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
+    charm: ch:mysql-router
+    channel: 8.0.19/edge
   nova-cloud-controller-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
+    charm: ch:mysql-router
+    channel: 8.0.19/edge
   glance-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
+    charm: ch:mysql-router
+    channel: 8.0.19/edge
   placement-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
+    charm: ch:mysql-router
+    channel: 8.0.19/edge
 
   mysql-innodb-cluster:
-    charm: cs:~openstack-charmers/mysql-innodb-cluster
+    charm: ch:mysql-innodb-cluster
     num_units: 3
     options:
       source: *openstack-origin
@@ -49,18 +56,20 @@ applications:
       - '0'
       - '1'
       - '2'
+    channel: 8.0.19/edge
 
   rabbitmq-server:
-    charm: cs:~openstack-charmers/rabbitmq-server
+    charm: ch:rabbitmq-server
     num_units: 1
     options:
     options:
       source: *openstack-origin
     to:
       - '3'
+    channel: 3.8/edge
 
   neutron-api:
-    charm: cs:~openstack-charmers/neutron-api
+    charm: ch:neutron-api
     series: *series
     num_units: 1
     options:
@@ -70,25 +79,29 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '4'
+    channel: xena/edge
 
   keystone:
-    charm: cs:~openstack-charmers/keystone
+    charm: ch:keystone
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '5'
+    channel: xena/edge
 
   glance:
-    charm: cs:~openstack-charmers/glance
+    charm: ch:glance
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '6'
+    channel: xena/edge
 
   neutron-openvswitch:
-    charm: cs:~openstack-charmers/neutron-openvswitch
+    charm: ch:neutron-openvswitch
+    channel: xena/edge
   neutron-gateway:
     charm: "../../../neutron-gateway"
     num_units: 1
@@ -99,7 +112,7 @@ applications:
       - '7'
 
   ovn-dedicated-chassis:
-    charm: cs:~openstack-charmers/ovn-dedicated-chassis
+    charm: ch:ovn-dedicated-chassis
     num_units: 1
     options:
       # start new units paused to allow unit by unit OVS to OVN migration
@@ -108,54 +121,63 @@ applications:
       # NOTE: We deliberately colocate the ovn-dedicated-chassis with the
       # neutron-gateway for migration test purposes.
       - '7'
+    channel: openstack-xena/edge
 
   nova-cloud-controller:
-    charm: cs:~openstack-charmers/nova-cloud-controller
+    charm: ch:nova-cloud-controller
     num_units: 1
     options:
       network-manager: Neutron
       openstack-origin: *openstack-origin
     to:
       - '8'
+    channel: xena/edge
 
   nova-compute:
-    charm: cs:~openstack-charmers/nova-compute
+    charm: ch:nova-compute
     num_units: 2
     options:
       openstack-origin: *openstack-origin
     to:
       - '9'
       - '10'
+    channel: xena/edge
 
   placement:
-    charm: cs:~openstack-charmers/placement
+    charm: ch:placement
     num_units: 1
     options:
       openstack-origin: *openstack-origin
     to:
       - '11'
+    channel: xena/edge
 
   vault-mysql-router:
-    charm: cs:~openstack-charmers/mysql-router
+    charm: ch:mysql-router
+    channel: 8.0.19/edge
   vault:
-    charm: cs:~openstack-charmers/vault
+    charm: ch:vault
     num_units: 1
     to:
       - '12'
+    channel: 1.7/edge
   ovn-central:
-    charm: cs:~openstack-charmers/ovn-central
+    charm: ch:ovn-central
     num_units: 3
     options:
       source: *openstack-origin
     to:
       - '13'
+    channel: openstack-xena/edge
   neutron-api-plugin-ovn:
-    charm: cs:~openstack-charmers/neutron-api-plugin-ovn
+    charm: ch:neutron-api-plugin-ovn
+    channel: xena/edge
   ovn-chassis:
-    charm: cs:~openstack-charmers/ovn-chassis
+    charm: ch:ovn-chassis
     options:
       # start new units paused to allow unit by unit OVS to OVN migration
       new-units-paused: true
+    channel: openstack-xena/edge
 
 relations:
 
