Updates to enable jammy and finalise charmcraft builds
- Add 22.04 to charmcraft.yaml
- Update metadata to include jammy
- Remove impish from metadata
- Update osci.yaml to include py3.10 default job
- Modify tox.ini to remove py35,py36,py37 tox target and add py310
  target.
- ensure that the openstack-origin is yoga
- charmhelpers sync

func-test-pr: https://github.com/openstack-charmers/zaza-openstack-tests/pull/747
Change-Id: I8bd5e6f5d002fbd1118f2c7fa54e50f1b31fc722

--- a/tests/bundles/focal-yoga.yaml
+++ b/tests/bundles/focal-yoga.yaml
@@ -75,6 +75,7 @@ applications:
       flat-network-providers: physnet1
       neutron-security-groups: true
       openstack-origin: *openstack-origin
+      enable-qos: true
     to:
       - '4'
     channel: yoga/edge
