--- a/charm-helpers-hooks.yaml
+++ b/charm-helpers-hooks.yaml
@@ -6,6 +6,7 @@ include:
     - cli
     - fetch
     - contrib.openstack|inc=*
+    - contrib.hardware.pci
     - contrib.hahelpers
     - contrib.network
     - contrib.python
