--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -21,7 +21,15 @@ parts:
       - README.md
 
 bases:
-  - name: ubuntu
-    channel: "20.04"
-    architectures:
-      - amd64
+  - build-on:
+      - name: ubuntu
+        channel: "20.04"
+        architectures:
+          - amd64
+    run-on:
+      - name: ubuntu
+        channel: "20.04"
+        architectures: [amd64, s390x, ppc64el, arm64]
+      - name: ubuntu
+        channel: "22.04"
+        architectures: [amd64, s390x, ppc64el, arm64]
