--- a/osci.yaml
+++ b/osci.yaml
@@ -1,14 +1,29 @@
 - project:
     templates:
-      - charm-unit-jobs
-      - charm-functional-jobs
+      - charm-unit-jobs-py38
     check:
       jobs:
-        - focal-xena:
-            voting: false
-        - impish-xena:
-            voting: false
-        # disabled as test flaps:
-        # Bug: https://bugs.launchpad.net/charm-neutron-gateway/+bug/1945746
-        - hirsute-wallaby:
-            voting: false
+        - focal-victoria_neutron-gateway-ovn
+        - focal-wallaby_neutron-gateway-ovn
+    vars:
+      needs_charm_build: true
+      charm_build_name: neutron-gateway
+      build_type: charmcraft
+
+- job:
+    name: focal-victoria_neutron-gateway-ovn
+    parent: func-target
+    dependencies:
+      - charm-build
+      - osci-lint
+      - tox-py38
+    vars:
+      tox_extra_args: "migrate-ovn:focal-victoria"
+
+- job:
+    name: focal-wallaby_neutron-gateway-ovn
+    parent: func-target
+    dependencies:
+      - focal-victoria_neutron-gateway-ovn
+    vars:
+      tox_extra_args: "migrate-ovn:focal-wallaby"
