Migrate charm charmhub for stable/victoria
- start from stable/victoria branch
- Do charmcraft, osci, zuul changes
- Modify libs to point to stable/victoria for:
  - charmhelpers
  - charms.openstack (as needed)
  - zaza & zaza.openstack.tests
- Remove unsupported test bundles
- migration bundles to charmhub.io (ch: prefix + channels)
- Build on 20.04 amd64
- Run on 20.04 amd64, s390x, ppc64el, arm64
- pin tempest

Change-Id: I7f9d5853c1fcaa87336c5430e828b9dd626147a6

--- a/osci.yaml
+++ b/osci.yaml
@@ -1,14 +1,25 @@
 - project:
     templates:
-      - charm-unit-jobs
-      - charm-functional-jobs
+      - charm-unit-jobs-py38
+      - charm-focal-ussuri-functional-jobs
+      - charm-victoria-functional-jobs
     check:
       jobs:
-        - focal-xena:
-            voting: false
-        - impish-xena:
-            voting: false
-        # disabled as test flaps:
-        # Bug: https://bugs.launchpad.net/charm-neutron-gateway/+bug/1945746
-        - hirsute-wallaby:
-            voting: false
+        - focal-ussuri_migrate-ovn_neutron-gateway
+        - focal-victoria_migrate-ovn_neutron-gateway
+    vars:
+      needs_charm_build: true
+      charm_build_name: neutron-gateway
+      build_type: charmcraft
+
+- job:
+    name: focal-ussuri_migrate-ovn_neutron-gateway
+    parent: focal-ussuri
+    vars:
+      tox_extra_args: migrate-ovn:focal-ussuri
+
+- job:
+    name: focal-victoria_migrate-ovn_neutron-gateway
+    parent: focal-victoria
+    vars:
+      tox_extra_args: migrate-ovn:focal-victoria
