Add Kinetic and Zed support
* sync charm-helpers to classic charms
* change openstack-origin/source default to zed
* align testing with zed
* add new zed bundles
* add zed bundles to tests.yaml
* add zed tests to osci.yaml and .zuul.yaml
* update build-on and run-on bases
* add bindep.txt for py310
* sync tox.ini and requirements.txt for ruamel
* use charmcraft_channel 2.0/stable
* drop reactive plugin overrides
* move interface/layer env vars to charmcraft.yaml

Change-Id: Ida68ffdab34c3136f3acf98629e4be6fda3bcea2

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -6,15 +6,15 @@ charm_name: neutron-gateway
 # OVS to OVN.
 #
 smoke_bundles:
-  - migrate-ovn: focal-xena
+  - migrate-ovn: jammy-yoga
 
 gate_bundles:
-  - migrate-ovn: focal-xena
-  - migrate-ovn: impish-xena
+  - migrate-ovn: jammy-yoga
 
 dev_bundles:
-  - migrate-ovn: focal-yoga
   - migrate-ovn: jammy-yoga
+  - migrate-ovn: jammy-zed
+  - migrate-ovn: kinetic-zed
 
 target_deploy_status:
   neutron-api-plugin-ovn:
@@ -80,5 +80,4 @@ tests_options:
   # allows verifying instances survive a SDN migration.
   zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest.test_instances_have_networking.run_resource_cleanup: false
   force_deploy:
-    - impish-xena
-    - jammy-yoga
+    - kinetic-zed
