--- a/tests/bundles/kinetic-zed.yaml
+++ b/tests/bundles/kinetic-zed.yaml
@@ -1,7 +1,7 @@
 variables:
   openstack-origin: &openstack-origin distro
 
-series: &series impish
+series: &series kinetic
 
 machines:
   0:
@@ -75,9 +75,10 @@ applications:
       flat-network-providers: physnet1
       neutron-security-groups: true
       openstack-origin: *openstack-origin
+      enable-qos: true
     to:
       - '4'
-    channel: yoga/edge
+    channel: latest/edge
 
   keystone:
     charm: ch:keystone
@@ -86,7 +87,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '5'
-    channel: yoga/edge
+    channel: latest/edge
 
   glance:
     charm: ch:glance
@@ -95,11 +96,11 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '6'
-    channel: yoga/edge
+    channel: latest/edge
 
   neutron-openvswitch:
     charm: ch:neutron-openvswitch
-    channel: yoga/edge
+    channel: latest/edge
   neutron-gateway:
     charm: ../../neutron-gateway.charm
     num_units: 1
@@ -129,7 +130,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '8'
-    channel: yoga/edge
+    channel: latest/edge
 
   nova-compute:
     charm: ch:nova-compute
@@ -139,7 +140,7 @@ applications:
     to:
       - '9'
       - '10'
-    channel: yoga/edge
+    channel: latest/edge
 
   placement:
     charm: ch:placement
@@ -148,7 +149,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '11'
-    channel: yoga/edge
+    channel: latest/edge
 
   vault-mysql-router:
     charm: ch:mysql-router
@@ -169,7 +170,7 @@ applications:
     channel: latest/edge
   neutron-api-plugin-ovn:
     charm: ch:neutron-api-plugin-ovn
-    channel: yoga/edge
+    channel: latest/edge
   ovn-chassis:
     charm: ch:ovn-chassis
     options:
